--- a/index.html
+++ b/index.html
@@ -48,6 +48,65 @@
             .list-elem:hover{
             background-color: rgba(255, 255, 255, 0.085);
             }
+            .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
         </style>
     </head>
     <body style="border-radius: 16px;overflow: hidden;background-color: rgb(26,26,26)">
@@ -56,7 +115,7 @@
 <p style="color: white;font-family: 'Calibri';position: fixed;bottom: 0px;right: 5px;">By amadyreksio</p>
 <div id="list">
 <button class="list-elem">Oceny<button class="btn"><img src="edit.png" id="changePage" style="width: 25px;"></button></button>
-
+<button class="list-elem">Zapis ocen<label class="switch" style="position: fixed;right: 10px;"><input type="checkbox" checked id="chk1"><span class="slider round"></span></label></button>
 </div>
 
         </div>
